<resources>
    <string name="app_name" translatable="false">donora</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="successSignIn" translatable="false">Berhasil Masuk</string>
    <string name="ok" translatable="false">Oke</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="bySigarda" translatable="false">Apps by PT.Otak Kanan</string>
    <string name="login" translatable="false">Masuk</string>
    <string name="loginAsGuest" translatable="false">Masuk Sebagai Tamu</string>
    <string name="register" translatable="false">Daftar</string>
    <string name="googleLogin" translatable="false">Masuk Dengan Google</string>
    <string name="googleRegister" translatable="false">Daftar Dengan Google</string>
    <string name="donthaveaccoutn" translatable="false">Belum Punya Akun ?</string>
    <string name="haveaccoutn" translatable="false">Sudah Punya Akun ?</string>

    <string name="dataProfile" translatable="false">Data Diri</string>
    <string name="username" translatable="false">username</string>
    <string name="fullName" translatable="false">Nama Lengkap</string>
    <string name="phoneNumber" translatable="false">Nomor Telepon</string>
    <string name="nik" translatable="false">Nomor Induk Kependudukan</string>
    <string name="age" translatable="false">Usia</string>
    <string name="gender" translatable="false">Jenis Kelamin</string>
    <string name="donorCode" translatable="false">Kode Donor</string>
    <string name="bloodType" translatable="false">Golongan Darah</string>
    <string name="failedCreateUser" translatable="false">Gagal Create User</string>
    <string name="useralreadycreated" translatable="false">User Sudah Dibuat</string>

    <string name="editProfile">Edit Profile</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>

    <string name="save">Simpan Perubahan</string>

    <string name="reward" translatable="false">Lihat Reward Saya</string>
    <string name="history" translatable="false">Lihat History Saya</string>

    <string name="thanks" translatable="false">Terimakasih sudah menjadi pahlawan dengan menyumbangkan darah,Lihat reward dan histori donor kamu disini!</string>
    <string name="logout" translatable="false">Keluar</string>
    <string name="select_date_button">Pilih Tanggal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="webClient" translatable="false">935126427076-jgcmqckpb2af307vrut7tfhng0j7itkd.apps.googleusercontent.com</string>
</resources>