<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfile"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="20dp"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:text="@string/fullName"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/fullName"
            android:textSize="14sp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:text="@string/phoneNumber"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/phoneNumber"
            android:textSize="14sp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:text="@string/nik"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/et_Nik"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/nik"
            android:textSize="14sp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:text="@string/gender"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/female"/>

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:text="@string/age"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/et_age"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/age"
            android:textSize="14sp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:text="@string/donorCode"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/et_donorId"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/donorCode"
            android:textSize="14sp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:text="@string/bloodType"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <Spinner
            android:id="@+id/bloodType"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/rmedium"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"/>



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reward"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:background="@drawable/view_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:fontFamily="@font/rbold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold" />


</LinearLayout>