<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataProfile"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/toEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/_icon__edit_"
            android:layout_gravity="center"
            android:layout_marginStart="230dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/rbold"
        android:text="@string/fullName"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/fullName"
        android:textSize="14sp"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/rbold"
        android:text="@string/phoneNumber"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tv_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/phoneNumber"
        android:textSize="14sp"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/rbold"
        android:text="@string/nik"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tv_Nik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/nik"
        android:textSize="14sp"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/rbold"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/gender"
        android:textSize="14sp"
        android:layout_marginStart="20dp"/>

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/rbold"
        android:text="@string/age"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/age"
        android:textSize="14sp"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/rbold"
        android:text="@string/donorCode"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tv_donorId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/donorCode"
        android:textSize="14sp"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/view_yellow">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="45dp"
            android:src="@drawable/donoricon"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/rbold"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/thanks"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/reward"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:fontFamily="@font/rbold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="35dp"
        android:drawableStart="@drawable/ic_rewarded"
        android:drawableEnd="@drawable/ic_arrow"
        android:backgroundTint="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/rbold"
        android:text="@string/history"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:drawablePadding="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="35dp"
        android:drawableStart="@drawable/ic_refresh"
        android:drawableEnd="@drawable/ic_arrow"
        android:backgroundTint="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/rbold"
        android:text="@string/logout"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:drawablePadding="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="35dp"
        android:drawableStart="@drawable/ic_logout"
        android:drawableEnd="@drawable/ic_arrow"
        android:backgroundTint="@color/white"/>

</LinearLayout>